@@ -1,3 +1,8 @@
+2009-01-12  Lars Hartmann  <lars (at) chaotika (dot) org>
+
+	* lib/liblpatom.c (lpatom_suffe_to_string): added
+	(lpatom_get_suffix): changed to use lpatom_suffe_to_string()
+
 2009-01-09  Lars Hartmann  <lars (at) chaotika (dot) org>
 
 	* lib/Makefile: modified to produce propperly linked dynamic objects
